# postgres-cpp-lib

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  cmake-multi-platform.yml  cmake-multiple-platform.yml
cmake/: PostgresLibConfig.cmake.in  libevent.cmake  libpq.cmake
dependencies/core/: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
dependencies/core/.github/workflows/: cmake-multi-platform.yml
dependencies/core/include/core/: ref.h
dependencies/core/include/core/error/: base_error.h  exception.h
dependencies/core/include/core/memory/: intrusive_ptr.h
dependencies/core/include/database/: connection.h  connection_factory.h  connection_manager.h  connection_pool.h  connection_pool_impl.h
dependencies/core/test/: CMakeLists.txt  connection_error_test.cpp  connection_manager_test.cpp  db_pool_test.cpp  intrusive_ptr_test.cpp
include/: postgres.h  postgres_error.h
include/core/error/: base_error.h
include/database/: connection.h  connection_error.h  connection_manager.h  connection_pool.h  connection_pool_impl.h  migrations.h  postgres.h  postgres_client.h  postgres_error.h  query_executor.h  transaction.h
include/database/internal/: type_detail.h
include/database/result/: colunm.h  row.h  table.h
include/postgrescxx/: client.h  migrations.h  pg_transport.h  transaction.h
include/postgrescxx/error/: pg_exception.h
include/postgrescxx/event/: event_loop_executor.h
include/postgrescxx/internal/: sql_parser.h  type_detail.h
include/postgrescxx/result/: colunm.h  row.h  table.h
lib/include/database/: connection.h  connection_pool.h
src/: client_pub.cpp  pg_transport.cpp  postgres_priv.cpp  postgres_pub.cpp  transaction.cpp
test/: connection_factory_test.cpp  connection_manager_test.cpp  connection_pool_advanced_test.cpp  db_pool_test.cpp  intrusive_ptr_test.cpp
tests/: .env.test  CMakeLists.txt  migration_test.cpp  postgres_cb_pool_test.cpp  postgres_error_test.cpp  postgres_query_test.cpp  postgres_test.cpp  postgres_transaction_test.cpp  run-postgres.sh  sql_parser_test.cpp  test_values.h
tests/docker/: docker-compose.yml  init_test_users.sql  run-test-db.sh
tests/gtest/: postgres_lib_test.h  test_queries.h  test_values.h
